--- a/package.json
+++ b/package.json
@@ -1,26 +1,51 @@
 {
-  "name": "messager-clone",
+  "name": "messenger-clone",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "@headlessui/react": "^1.7.14",
+    "@next-auth/prisma-adapter": "^1.0.6",
+    "@prisma/client": "^4.13.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@types/node": "18.16.3",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.1",
+    "autoprefixer": "10.4.14",
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.0",
+    "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
+    "eslint": "8.39.0",
+    "eslint-config-next": "13.3.4",
+    "lodash": "^4.17.21",
+    "next": "^13.3.4",
+    "next-auth": "^4.22.1",
+    "next-cloudinary": "^4.10.0",
+    "next-superjson-plugin": "^0.5.7",
+    "postcss": "8.4.23",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.3.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.8.0",
+    "react-select": "^5.7.3",
+    "react-spinners": "^0.13.8",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.0.4",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "@types/bcrypt": "^5.0.0",
+    "@types/lodash": "^4.14.194",
+    "prisma": "^4.13.0"
   }
 }
